clean up components

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -28,3 +28,5 @@ server {
     proxy_pass http://api;
   }
 }
+
+# NOTE: you can add directives to cache content so that nginx doesnt have to request it from the upstream server
