--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -32,6 +32,7 @@ services:
       - PGDATABASE=postgres
       - PGPASSWORD=postgres_password
       - PGPORT=5432
+      - NODE_ENV=development
   client:
     environment:
       - WDS_SOCKET_PORT=0
@@ -51,3 +52,4 @@ services:
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
+      - NODE_ENV=development
