--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -34,8 +34,8 @@ services:
       - PGPORT=5432
       - NODE_ENV=development
   client:
-    environment:
-      - WDS_SOCKET_PORT=0
+    # environment:
+    #   - WDS_SOCKET_PORT=0
     build:
       dockerfile: Dockerfile.dev
       context: ./client
